--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <nav>
   <ul>
     <li><a href="index.html">Homepage</a></li>
-    <li><a href="activities.html">Things to Do</a></li>
-    <li><a href="dining.html">Where to Eat</a></li>
-    <li><a href="statement.html">Design Statement</a></li>
+    <li><a href="3dar.html">3D Agument Reality</a></li>
+    <li><a href="resources.html">Resources</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
