--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Website Template (Please update for full credit)</title>
+	<title>Final - 3D Augemented Reality </title>
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
     <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
-	<h1>Website Template</h1>
+	<h1>This is going to be filled in with a inspiration and motivation page.</h1>
 	<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
 	
 </body>
