--- a/resources.html
+++ b/resources.html
@@ -1,1 +1,23 @@
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Final - 3D Augemented Reality </title>
+	<link rel="stylesheet" href="styles.css">
+</head>
+<body>
+<nav>
+  <ul>
+    <li><a href="index.html">Homepage</a></li>
+    <li><a href="3dar.html">3D Agument Reality</a></li>
+    <li><a href="resources.html">Resources</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+	<h1>This is going to be filled with resources and videos.</h1>
+	<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
+	
+</body>
+</html>
 
