--- a/index.html
+++ b/index.html
@@ -7,16 +7,30 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<nav>
-  <ul>
-    <li><a href="index.html">Homepage</a></li>
-    <li><a href="3dar.html">3D Agument Reality</a></li>
-    <li><a href="resources.html">Resources</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
-	<h1>This is going to be filled in with a inspiration and motivation page.</h1>
-	<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
+<!-- Navigation -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Homepage</a></li>
+      <li><a href="3dar.html">3D Augmented Reality</a></li>
+      <li><a href="resources.html">Resources</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+<!-- Hero Section -->
+  <header class="hero">
+    <h1>Biology Made Visual</h1>
+    <p class="hero-text">
+      Hi, I’m <strong>Kenny Nguyen</strong>, a <strong>Biology Tutor & Academic Coach</strong> at
+      Dallas College Richland Campus Learning Commons.  
+      BioBridge uses visual learning and augmented reality to help students truly understand biology —
+      not just memorize it.
+    </p>
+    <div class="hero-buttons">
+      <a href="3dar.html" class="button primary">Explore 3D / AR Lab</a>
+      <a href="resources.html" class="button secondary">View Study Resources</a>
+    </div>
+  </header>
 	
 </body>
 </html>
