Add About and Inspiration sections to index.html
Added sections for About BioBridge and My Inspiration.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </ul>
   </nav>
 
-<!-- Hero Section -->
+ <!-- Hero Section -->
   <header class="hero">
     <h1>Biology Made Visual</h1>
     <p class="hero-text">
@@ -31,7 +31,38 @@
       <a href="resources.html" class="button secondary">View Study Resources</a>
     </div>
   </header>
-	
+
+ <!-- About Section -->
+  <section class="section light">
+    <h2>About BioBridge</h2>
+    <p>
+      Many students struggle with biology because it is often taught through dense textbooks
+      and static diagrams. BioBridge was created to change that experience.
+    </p>
+    <p>
+      As a Biology Tutor and Academic Coach, I work one-on-one with students to break down complex
+      topics like cell structure, membrane transport, and protein synthesis using
+      visual explanations and interactive tools.
+    </p>
+  </section>
+
+  <!-- Inspiration Section -->
+  <section class="section">
+    <h2>My Inspiration</h2>
+    <p>
+      My passion for visual learning began in 7th grade with my science teacher,
+      <strong>Mr. Andy Thomason</strong>. He introduced our class to augmented reality as a way
+      to explore scientific concepts beyond the textbook.
+    </p>
+    <blockquote>
+      “Seeing biology through AR made abstract ideas feel real. We weren’t just reading about cells —
+      we were exploring them.”
+    </blockquote>
+    <p>
+      That experience shaped how I support students today. BioBridge continues that same philosophy:
+      learning is most effective when students can see, explore, and interact with what they study.
+    </p>
+  </section>	
 </body>
 </html>
 
