Fix text and update section classes in index.html
Corrected phrasing in the hero text and updated section classes for better semantic structure.

--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
     <p class="hero-text">
       Hi, I’m <strong>Kenny Nguyen</strong>, a <strong>Biology Tutor & Academic Coach</strong> at
       Dallas College Richland Campus Learning Commons.  
-      BioBridge uses visual learning and augmented reality to help students truly understand biology —
-      not just memorize it.
+      BioBridge uses visual learning and augmented reality to help students truly understand biology not only just memorize it.
     </p>
     </div>
-  </header>
+  </header> 
 
  <!-- About Section -->
-  <section class="section light">
+  <section class="about">
     <h2>About BioBridge</h2>
     <p>
       Many students struggle with biology because it is often taught through dense textbooks
@@ -44,7 +43,7 @@
   </section>
 
   <!-- Inspiration Section -->
-  <section class="section">
+  <section class="inspiration">
     <h2>My Inspiration</h2>
     <p>
       My passion for visual learning began in 7th grade with my science teacher,
@@ -52,7 +51,7 @@
       to explore scientific concepts beyond the textbook.
     </p>
     <blockquote>
-      “Seeing biology through AR made abstract ideas feel real. We weren’t just reading about cells —
+      “Seeing biology through AR made makes the representation feel way more interactive. We weren’t just reading about cells
       we were exploring them.”
     </blockquote>
     <p>
