Enhance tutoring description with interactive learning focus
Expanded the explanation of tutoring methods and resources for biology education, emphasizing interactive learning and personal experiences.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
     <p>
       As a Biology Tutor and Academic Coach, I work one-on-one with students to break down complex
       topics like cell structure, membrane transport, and protein synthesis using
-      visual explanations and interactive tools.
+      visual explanations and interactive tools. I can see how it is atmost difficult for student to 
+	  engage and learn when they are glued to long straining of information all at once. Especially when it comes
+	  exploring information from the textbooks and lecture powerpoint. It is harder for them to digest information. 
+	  To make it easier for them, I want to share my experience when it comes to finding resources, a 3D augmented 
+	  reality where they can interact, and amazing resources such as visual representation in videos. 
+	  I beleive that education can be represented as something interactive. Especially when it stucked with me when I was student. 
+	  I hope my animations and 3D modeling can help bring a brigde to education in Biology. 
     </p>
   </section>
 
