Add Then & Now section and Call to Action

--- a/index.html
+++ b/index.html
@@ -65,6 +65,54 @@
       learning is most effective when students can see, explore, and interact with what they study.
     </p>
   </section>	
+
+<!-- Then & Now Section -->
+  <section class="then-and-now">
+    <h2>Then & Now</h2>
+    <div class="two-column">
+      <div class="card">
+        <h3>Then</h3>
+        <p>
+          A curious middle school student discovering augmented reality in science for the first time,
+          learning that biology could be explored instead of memorized.
+        </p>
+      </div>
+      <div class="card">
+        <h3>Now</h3>
+        <p>
+          A Biology Tutor and Academic Coach using those same visual tools to help college students
+          build confidence and understanding in biology.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Call to Action -->
+  <section class="call-to-action">
+    <h2>Ready to Explore Biology?</h2>
+    <p>
+      Visit the 3D / AR Lab to explore interactive models, or browse curated resources
+      to support your biology studies.
+    </p>
+    <div class="hero-buttons">
+      <a href="3dar.html" class="button primary">Try the AR Lab</a>
+      <a href="contact.html" class="button secondary">Get Tutoring Help</a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p><strong>Kenny Nguyen</strong></p>
+    <p>Biology Tutor & Academic Coach</p>
+    <p>Dallas College · Richland Campus Learning Commons</p>
+    <p>
+      <a href="mailto:knguyn@dallascollege.edu">
+        knguyn@dallascollege.edu
+      </a>
+    </p>
+    <p>© 2025 Kenny Nguyen. All rights reserved.</p>
+  </footer>
+
 </body>
 </html>
 
