Fix title and update content for clarity
Corrected spelling errors and improved text clarity in various sections.

--- a/index.html
+++ b/index.html
@@ -3,116 +3,119 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Final - 3D Augemented Reality </title>
+	<title>Final - 3D Augmented Reality</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
 <!-- Navigation -->
-  <nav>
-    <ul>
-      <li><a href="index.html">Homepage</a></li>
-      <li><a href="3dar.html">3D Augmented Reality</a></li>
-      <li><a href="resources.html">Resources</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+<nav>
+  <ul>
+    <li><a href="index.html">Homepage</a></li>
+    <li><a href="3dar.html">3D Augmented Reality</a></li>
+    <li><a href="resources.html">Resources</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
 
- <!-- Hero Section -->
-  <header class="hero">
-    <h1>Biology Made Visual</h1>
-    <p class="hero-text">
-      Hi, I’m <strong>Kenny Nguyen</strong>, a <strong>Biology Tutor & Academic Coach</strong> at
-      Dallas College Richland Campus Learning Commons.  
-      BioBridge uses visual learning and augmented reality to help students truly understand biology not only just memorize it.
-    </p>
-    </div>
-  </header> 
+<!-- Hero Section -->
+<header class="hero">
+  <h1>Biology Made Visual</h1>
+  <p class="hero-text">
+    Hi, I’m <strong>Kenny Nguyen</strong>, a <strong>Biology Tutor & Academic Coach</strong> at
+    Dallas College Richland Campus Learning Commons.
+    BioBridge uses visual learning and augmented reality to help students truly understand biology,
+    not just memorize it.
+  </p>
+</header> 
 
- <!-- About Section -->
-  <section class="about">
-    <h2>About BioBridge</h2>
-    <p>
-      Many students struggle with biology because it is often taught through dense textbooks
-      and static diagrams. BioBridge was created to change that experience.
-    </p>
-    <p>
-      As a Biology Tutor and Academic Coach, I work one-on-one with students to break down complex
-      topics like cell structure, membrane transport, and protein synthesis using
-      visual explanations and interactive tools. I can see how it is atmost difficult for student to 
-	  engage and learn when they are glued to long straining of information all at once. Especially when it comes
-	  exploring information from the textbooks and lecture powerpoint. It is harder for them to digest information. 
-	  To make it easier for them, I want to share my experience when it comes to finding resources, a 3D augmented 
-	  reality where they can interact, and amazing resources such as visual representation in videos. 
-	  I beleive that education can be represented as something interactive. Especially when it stucked with me when I was student. 
-	  I hope my animations and 3D modeling can help bring a brigde to education in Biology. 
-    </p>
-  </section>
+<!-- About Section -->
+<section class="about">
+  <h2>About BioBridge</h2>
+  <p>
+    Many students struggle with biology because it is often taught through dense textbooks
+    and static diagrams. BioBridge was created to change that experience.
+  </p>
+  <p>
+    As a Biology Tutor and Academic Coach, I work one on one with students to break down complex
+    topics like cell structure, membrane transport, and protein synthesis using
+    visual explanations and interactive tools. I see how difficult it can be for students to
+    engage and learn when they are overwhelmed by long streams of information all at once.
+    This is especially true when exploring information from textbooks and lecture PowerPoints.
+    It becomes harder for students to digest the material.
+    To make learning easier, I want to share my experience in finding effective resources,
+    including 3D augmented reality tools that students can interact with, as well as strong
+    visual explanations through videos.
+    I believe education can be represented as something interactive.
+    This belief stayed with me from my own time as a student.
+    I hope my animations and 3D modeling can help build a bridge to better understanding in biology.
+  </p>
+</section>
 
-  <!-- Inspiration Section -->
-  <section class="inspiration">
-    <h2>My Inspiration</h2>
-    <p>
-      My passion for visual learning began in 7th grade with my science teacher,
-      <strong>Mr. Andy Thomason</strong>. He introduced our class to augmented reality as a way
-      to explore scientific concepts beyond the textbook.
-    </p>
-    <blockquote>
-      “Seeing biology through AR made makes the representation feel way more interactive. We weren’t just reading about cells
-      we were exploring them.”
-    </blockquote>
-    <p>
-      That experience shaped how I support students today. BioBridge continues that same philosophy:
-      learning is most effective when students can see, explore, and interact with what they study.
-    </p>
-  </section>	
+<!-- Inspiration Section -->
+<section class="inspiration">
+  <h2>My Inspiration</h2>
+  <p>
+    My passion for visual learning began in 7th grade with my science teacher,
+    <strong>Mr. Andy Thomason</strong>. He introduced our class to augmented reality as a way
+    to explore scientific concepts beyond the textbook.
+  </p>
+  <blockquote>
+    “Seeing biology through AR made the representation feel much more interactive.
+    We were not just reading about cells, we were exploring them.”
+  </blockquote>
+  <p>
+    That experience shaped how I support students today. BioBridge continues that same philosophy.
+    Learning is most effective when students can see, explore, and interact with what they study.
+  </p>
+</section>	
 
 <!-- Then & Now Section -->
-  <section class="then-and-now">
-    <h2>Then & Now</h2>
-    <div class="two-column">
-      <div class="card">
-        <h3>Then</h3>
-        <p>
-          A curious middle school student discovering augmented reality in science for the first time,
-          learning that biology could be explored instead of memorized.
-        </p>
-      </div>
-      <div class="card">
-        <h3>Now</h3>
-        <p>
-          A Biology Tutor and Academic Coach using those same visual tools to help college students
-          build confidence and understanding in biology.
-        </p>
-      </div>
+<section class="then-and-now">
+  <h2>Then & Now</h2>
+  <div class="two-column">
+    <div class="card">
+      <h3>Then</h3>
+      <p>
+        A curious middle school student discovering augmented reality in science for the first time,
+        learning that biology could be explored instead of memorized.
+      </p>
     </div>
-  </section>
-
-  <!-- Call to Action -->
-  <section class="call-to-action">
-    <h2>Ready to Explore Biology?</h2>
-    <p>
-      Visit the 3D / AR Lab to explore interactive models, or browse curated resources
-      to support your biology studies.
-    </p>
-    <div class="hero-buttons">
-      <a href="3dar.html" class="button primary">Try the AR Lab</a>
-      <a href="contact.html" class="button secondary">Get Tutoring Help</a>
+    <div class="card">
+      <h3>Now</h3>
+      <p>
+        A Biology Tutor and Academic Coach using those same visual tools to help college students
+        build confidence and understanding in biology.
+      </p>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Footer -->
-  <footer>
-    <p><strong>Kenny Nguyen</strong></p>
-    <p>Biology Tutor & Academic Coach</p>
-    <p>Dallas College · Richland Campus Learning Commons</p>
-    <p>
-      <a href="mailto:knguyn@dallascollege.edu">
-        knguyn@dallascollege.edu
-      </a>
-    </p>
-    <p>© 2025 Kenny Nguyen. All rights reserved.</p>
-  </footer>
+<!-- Call to Action -->
+<section class="call-to-action">
+  <h2>Ready to Explore Biology?</h2>
+  <p>
+    Visit the 3D / AR Lab to explore interactive models, or browse curated resources
+    to support your biology studies.
+  </p>
+  <div class="hero-buttons">
+    <a href="3dar.html" class="button primary">Try the AR Lab</a>
+    <a href="contact.html" class="button secondary">Get Tutoring Help</a>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer>
+  <p><strong>Kenny Nguyen</strong></p>
+  <p>Biology Tutor & Academic Coach</p>
+  <p>Dallas College · Richland Campus Learning Commons</p>
+  <p>
+    <a href="mailto:knguyn@dallascollege.edu">
+      knguyn@dallascollege.edu
+    </a>
+  </p>
+  <p>© 2025 Kenny Nguyen. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
-
