Enhance 3dar.html with navigation and hero section
Added navigation and hero section to 3dar.html.

--- a/3dar.html
+++ b/3dar.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+<!-- Navigation -->
 <nav>
   <ul>
     <li><a href="index.html">Homepage</a></li>
@@ -15,9 +17,16 @@
     <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
-	<h1>This is going to be filled wiht 3d model of qr codes.</h1>
-	<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
-	
+
+<!-- Hero Section -->
+<header class="hero">
+  <h1>3D / AR Lab</h1>
+  <p class="hero-text">
+    This page is a hands-on space where you can scan a QR code and view biology models in 3D and augmented reality.
+    The goal is to make biology feel visual, interactive, and easier to understand.
+  </p>
+</header>
+
 </body>
 </html>
 
