Add user guidance sections to 3dar.html
Added sections on 'What You Will Do' and 'How to Use the AR Lab' to enhance user guidance.

--- a/3dar.html
+++ b/3dar.html
@@ -27,6 +27,37 @@
   </p>
 </header>
 
+<!-- What You Will Do -->
+<section class="about">
+  <h2>What You Will Do Here</h2>
+  <p>
+    You will choose a model, scan the QR code, and open the model on your device.
+    Each model includes a short description of what to look for, along with study prompts to guide your learning.
+  </p>
+  <p>
+    These models are meant to support topics commonly covered in introductory biology, including cell structure,
+    membrane transport, and protein related structures. New models will be added as the project grows.
+  </p>
+</section>
+
+<!-- How to Use -->
+<section class="inspiration">
+  <h2>How to Use the AR Lab</h2>
+  <p>
+    Follow these steps for the best experience:
+  </p>
+  <ol>
+    <li>Pick a model from the gallery below.</li>
+    <li>Scan the QR code using your camera app.</li>
+    <li>Open the model link in your browser.</li>
+    <li>Use pinch to zoom, drag to rotate, and explore the structure.</li>
+    <li>If your device supports AR, select the AR option when available.</li>
+  </ol>
+  <p>
+    Tip: Make sure you are in a well lit area if you are using AR, and move your camera slowly so the device can detect the environment.
+  </p>
+</section>
+
 </body>
 </html>
 
