Enhance 3dar.html with compatibility and gallery sections
Added device compatibility information and AR model gallery section.

--- a/3dar.html
+++ b/3dar.html
@@ -41,7 +41,7 @@
 </section>
 
 <!-- How to Use -->
-<section class="inspiration">
+<section class="using-ar">
   <h2>How to Use the AR Lab</h2>
   <p>
     Follow these steps for the best experience:
@@ -57,6 +57,35 @@
     Tip: Make sure you are in a well lit area if you are using AR, and move your camera slowly so the device can detect the environment.
   </p>
 </section>
+
+<!-- Device Compatibility -->
+<section class="compatibility">
+  <h2>Device Compatibility</h2>
+  <div class="two-column">
+    <div class="card">
+      <h3>iPhone and iPad</h3>
+      <p>
+        Most modern iPhones and iPads support AR. Use the camera app to scan the QR code.
+        If the model opens in a viewer that offers AR, select the AR option and follow the on screen instructions.
+      </p>
+    </div>
+    <div class="card">
+      <h3>Android Phones</h3>
+      <p>
+        Many Android devices support AR, but it depends on the model and settings.
+        Scan the QR code, open the link, and look for an AR option if it is provided by the viewer.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- AR Model Gallery -->
+<section class="ar-gallery">
+  <h2>AR Model Gallery</h2>
+  <p>
+    Select a model below. Scan the QR code to view it.
+    If you are viewing this page on your phone, you can also tap the model link.
+  </p>
 
 </body>
 </html>
