Add Cell Model card with QR code and prompts
Added a model card for the Cell Model with QR code and study prompts.

--- a/3dar.html
+++ b/3dar.html
@@ -86,6 +86,32 @@
     Select a model below. Scan the QR code to view it.
     If you are viewing this page on your phone, you can also tap the model link.
   </p>
+  
+<div class="two-column">
+
+    <!-- Model Card 1 -->
+    <div class="card">
+      <h3>Cell Model</h3>
+      <p>
+        Focus on major organelles and how each structure supports the cell’s function.
+        Try identifying the nucleus, mitochondria, and cell membrane.
+      </p>
+
+      <p>
+        <strong>QR Code:</strong>
+      </p>
+      <img src="images/qr-cell.png" alt="QR code for the Cell Model" width="220">
+
+      <p>
+        <strong>Model Link:</strong>
+        <a href="#" target="_blank" rel="noopener">Open Cell Model</a>
+	  </p>
+
+   	 <p>
+        <strong>Study Prompts:</strong><br>
+        What does each organelle do, and what would happen if it failed?
+     </p>
+  </div>
 
 </body>
 </html>
