Remove rel attribute from model link

--- a/3dar.html
+++ b/3dar.html
@@ -104,7 +104,7 @@
 
       <p>
         <strong>Model Link:</strong>
-        <a href="#" target="_blank" rel="noopener">Open Cell Model</a>
+        <a href="#" target="_blank" >Open Cell Model</a>
 	  </p>
 
    	 <p>
