--- a/3dar.html
+++ b/3dar.html
@@ -80,14 +80,14 @@
 </section>
 
 <!-- AR Model Gallery -->
-<section class="ar-gallery">
+<section class="call-to-action">
   <h2>AR Model Gallery</h2>
   <p>
     Select a model below. Scan the QR code to view it.
     If you are viewing this page on your phone, you can also tap the model link.
   </p>
-  
-<div class="two-column">
+
+  <div class="two-column">
 
     <!-- Model Card 1 -->
     <div class="card">
@@ -104,14 +104,89 @@
 
       <p>
         <strong>Model Link:</strong>
-        <a href="#" target="_blank" >Open Cell Model</a>
-	  </p>
+        <a href="#" target="_blank">Open Cell Model</a>
+      </p>
 
-   	 <p>
+      <p>
         <strong>Study Prompts:</strong><br>
         What does each organelle do, and what would happen if it failed?
-     </p>
+      </p>
+    </div>
+
+    <!-- Model Card 2 -->
+    <div class="card">
+      <h3>Mitochondrion</h3>
+      <p>
+        Explore the outer membrane, inner membrane, and cristae.
+        Connect the shape of the mitochondrion to ATP production.
+      </p>
+
+      <p>
+        <strong>QR Code:</strong>
+      </p>
+      <img src="images/qr-mitochondria.png" alt="QR code for the Mitochondrion Model" width="220">
+
+      <p>
+        <strong>Model Link:</strong>
+        <a href="#" target="_blank">Open Mitochondrion Model</a>
+      </p>
+
+      <p>
+        <strong>Study Prompts:</strong><br>
+        Why does the inner membrane have folds, and what advantage does that create?
+      </p>
+    </div>
+
+    <!-- Model Card 3 -->
+    <div class="card">
+      <h3>Cell Membrane</h3>
+      <p>
+        Focus on the phospholipid bilayer and membrane proteins.
+        Think about how the membrane controls what enters and leaves the cell.
+      </p>
+
+      <p>
+        <strong>QR Code:</strong>
+      </p>
+      <img src="images/qr-membrane.png" alt="QR code for the Cell Membrane Model" width="220">
+
+      <p>
+        <strong>Model Link:</strong>
+        <a href="#" target="_blank" >Open Cell Membrane Model</a>
+      </p>
+
+      <p>
+        <strong>Study Prompts:</strong><br>
+        Which molecules pass freely, and which ones need a transport protein?
+      </p>
+    </div>
+
+    <!-- Model Card 4 -->
+    <div class="card">
+      <h3>DNA Structure</h3>
+      <p>
+        Explore the double helix structure and how base pairing supports replication.
+        Look for major and minor grooves if visible in the model.
+      </p>
+
+      <p>
+        <strong>QR Code:</strong>
+      </p>
+      <img src="images/qr-dna.png" alt="QR code for the DNA Structure Model" width="220">
+
+      <p>
+        <strong>Model Link:</strong>
+        <a href="#" target="_blank">Open DNA Model</a>
+      </p>
+
+      <p>
+        <strong>Study Prompts:</strong><br>
+        How does base pairing help maintain accurate genetic information?
+      </p>
+    </div>
+
   </div>
+</section>
 
 </body>
 </html>
