Change section class from 'call-to-action' to 'ar-gallery'

--- a/3dar.html
+++ b/3dar.html
@@ -80,7 +80,7 @@
 </section>
 
 <!-- AR Model Gallery -->
-<section class="call-to-action">
+<section class="ar-gallery">
   <h2>AR Model Gallery</h2>
   <p>
     Select a model below. Scan the QR code to view it.
