--- a/3dar.html
+++ b/3dar.html
@@ -184,9 +184,48 @@
         How does base pairing help maintain accurate genetic information?
       </p>
     </div>
-
   </div>
 </section>
+
+<!-- Troubleshooting -->
+<section class="about">
+  <h2>Troubleshooting</h2>
+  <p>
+    If a model does not load, try refreshing the page, switching browsers, or connecting to a stronger Wi Fi network.
+    If the QR code does not scan, increase screen brightness or move the camera back slightly.
+  </p>
+  <p>
+    If AR does not appear as an option, your device may not support AR for that viewer, or permissions may be disabled.
+    Check camera permissions and try again.
+  </p>
+</section>
+
+<!-- Call to Action -->
+<section class="call-to-action">
+  <h2>Need Help While Studying?</h2>
+  <p>
+    If you want tutoring support, study guidance, or help connecting these models to for further explanation,
+    feel free to reach out through the Contact page. Also check out the resource page, there are videos and website that
+	can help you.
+  </p>
+  <div class="hero-buttons">
+    <a href="resources.html" class="button primary">View Study Resources</a>
+    <a href="contact.html" class="button secondary">Contact Me</a>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer>
+  <p><strong>Kenny Nguyen</strong></p>
+  <p>Biology Tutor & Academic Coach</p>
+  <p>Dallas College · Richland Campus Learning Commons</p>
+  <p>
+    <a href="mailto:knguyn@dallascollege.edu">
+      knguyn@dallascollege.edu
+    </a>
+  </p>
+  <p>© 2025 Kenny Nguyen. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
