--- a/resources.html
+++ b/resources.html
@@ -7,17 +7,40 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+	
+<!-- Navigation -->
 <nav>
   <ul>
     <li><a href="index.html">Homepage</a></li>
-    <li><a href="3dar.html">3D Agument Reality</a></li>
+    <li><a href="3dar.html">3D Augmented Reality</a></li>
     <li><a href="resources.html">Resources</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
-	<h1>This is going to be filled with resources and videos.</h1>
-	<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
-	
+
+<!-- Hero Section -->
+<header class="hero">
+  <h1>Biology Learning Resources</h1>
+  <p class="hero-text">
+    These resources are curated to support BIOL 1406 students.
+    They focus on visual explanations, short videos, and clear navigation
+    to help make biology easier to understand.
+  </p>
+</header>
+
+<!-- Intro Section -->
+<section class="about">
+  <h2>How to Use These Resources</h2>
+  <p>
+    Each topic includes three videos and three websites.
+    The videos are short and visual, while the websites provide diagrams
+    and explanations without overwhelming textbook style reading.
+  </p>
+  <p>
+    These resources work best when paired with the 3D and AR models
+    found in the AR Lab.
+  </p>
+</section>
 </body>
 </html>
 
