Add Protein Synthesis resources and call to action
Added resources for Protein Synthesis including videos and websites, along with a call to action for 3D interaction.

--- a/resources.html
+++ b/resources.html
@@ -127,7 +127,73 @@
   </ul>
 </section>
 
+<!-- Topic 3 -->
+<section class="topic-3">
+  <h2>Protein Synthesis</h2>
+
+  <h3>Videos</h3>
+  <ul>
+    <li>
+      <a href="https://www.youtube.com/watch?v=80kxa1zApUM" target="_blank">
+        Khan Academy: Protein Synthesis Overview
+      </a>
+    </li>
+    <li>
+      <a href="https://www.youtube.com/shorts/mSMjwxNK2EU" target="_blank">
+        Amoeba Sisters: Transcription and Translation
+      </a>
+    </li>
+    <li>
+      <a href="https://www.khanacademy.org/science/ap-biology/gene-expression-and-regulation/translation/v/differences-in-translation-between-prokaryotes-and-eukaryotes" target="_blank">
+        Khan Academy: Translation Differences
+      </a>
+    </li>
+  </ul>
+
+  <h3>Websites</h3>
+  <ul>
+    <li>
+      <a href="https://www.khanacademy.org/science/biology/gene-expression-central-dogma" target="_blank">
+        Khan Academy: Central Dogma of Biology
+      </a>
+    </li>
+    <li>
+      <a href="https://www.khanacademy.org/science/biology/gene-expression-central-dogma/translation-polypeptides/a/protein-targeting-and-traffic" target="_blank">
+        Khan Academy: Translation and Proteins
+      </a>
+    </li>
+    <li>
+      <a href="https://www.genome.gov/genetics-glossary/Protein-Synthesis" target="_blank">
+        National Human Genome Research Institute: Protein Synthesis
+      </a>
+    </li>
+  </ul>
 </section>
+
+<!-- Call to Action -->
+<section class="call-to-action">
+  <h2>Want to See These Concepts in 3D?</h2>
+  <p>
+    Visit the 3D and AR Lab to interact with models that bring these topics to life.
+  </p>
+  <div class="hero-buttons">
+    <a href="3dar.html" class="button primary">Visit AR Lab</a>
+    <a href="contact.html" class="button secondary">Get Tutoring Help</a>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer>
+  <p><strong>Kenny Nguyen</strong></p>
+  <p>Biology Tutor & Academic Coach</p>
+  <p>Dallas College · Richland Campus Learning Commons</p>
+  <p>
+    <a href="mailto:knguyn@dallascollege.edu">
+      knguyn@dallascollege.edu
+    </a>
+  </p>
+  <p>© 2025 Kenny Nguyen. All rights reserved.</p>
+</footer
+
 </body>
 </html>
-
