Enhance contact.html with navigation and contact info

--- a/contact.html
+++ b/contact.html
@@ -7,17 +7,74 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<nav>
-  <ul>
-    <li><a href="index.html">Homepage</a></li>
-    <li><a href="3dar.html">3D Agument Reality</a></li>
-    <li><a href="resources.html">Resources</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
-	<h1>This is going to be filled with information and who to contact and my hours that I tutor, how they can make an appointment with me.</h1>
-	<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
-	
+  <!-- Navigation -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Homepage</a></li>
+      <li><a href="3dar.html">3D Augmented Reality</a></li>
+      <li><a href="resources.html">Resources</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <main class="contact">
+
+    <!-- Important Notice -->
+    <section class="notice">
+      <h1>Contact and Booking</h1>
+
+      <div class="warning-box">
+        <h2>Important Notice</h2>
+        <p>
+          You cannot book an appointment with me through email. Appointments must be scheduled using Navigate.
+        </p>
+        <p>
+          You are welcome to email me questions before your appointment, such as what to bring and what topic you want to focus on.
+          However, I cannot answer course content questions through email. Dallas College tutoring policies prohibit tutoring through email.
+          For teaching and lecture style questions, please contact your professor.
+        </p>
+      </div>
+
+      <div class="date-term">
+        <p><strong>Today:</strong> <span id="todayText">Loading...</span></p>
+        <p><strong>Current Dallas College Term:</strong> <span id="termText">Loading...</span></p>
+      </div>
+    </section>
+
+    <!-- Book an Appointment -->
+    <section class="booking">
+      <h2>Book a Tutoring Appointment</h2>
+      <p>
+        Use Navigate to schedule an appointment with me:
+      </p>
+      <p>
+        <a href="https://dallascollege.campus.eab.com/pal/_TsLscdNkR">Book with Navigate</a>
+      </p>
+    </section>
+
+    <!-- Email Contacts -->
+    <section class="emails">
+      <h2>Email</h2>
+      <p>
+        <strong>Email me:</strong>
+        <a href="mailto:knguyn@dallascollege.edu">knguyn@dallascollege.edu</a>
+      </p>
+      <p>
+        <strong>Richland Campus Learning Commons:</strong>
+        <a href="mailto:LearningCommons@DallasCollege.edu">LearningCommons@DallasCollege.edu</a>
+      </p>
+      <p>
+        <strong>Learning Commons Website:</strong>
+        <a href="https://www.dallascollege.edu/resources/pages/learning-commons.aspx">Learning Commons Resources</a>
+      </p>
+    </section>
+
+    <!-- Phone -->
+    <section class="phone">
+      <h2>Information Desk Phone</h2>
+      <p><strong>Phone:</strong> 972-238-6081</p>
+      <p><strong>Phone:</strong> 972-238-6226</p>
+    </section>
 </body>
 </html>
 
