Modify Learning Commons link and add location details
Updated the Learning Commons link and added location and hours sections.

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
       </p>
       <p>
         <strong>Learning Commons Website:</strong>
-        <a href="https://www.dallascollege.edu/resources/pages/learning-commons.aspx">Learning Commons Resources</a>
+        <a href="https://www.dallascollege.edu/resources/tutoring/">Learning Commons Resources</a>
       </p>
     </section>
 
@@ -75,6 +75,78 @@
       <p><strong>Phone:</strong> 972-238-6081</p>
       <p><strong>Phone:</strong> 972-238-6226</p>
     </section>
+
+    <!-- Location -->
+    <section class="location">
+      <h2>Visit Us</h2>
+      <p>
+        <strong>Richland Campus Learning Commons</strong><br>
+        12800 Abrams Road<br>
+        Dallas, TX 75243
+      </p>
+      <p>
+        <strong>Campus Map (La Vaca Hall):</strong><br>
+        <a href="https://map.concept3d.com/?id=2044#!ce/66885?ct/75932,75909,75908,72762,70147,70114,70109,70104,70103,70098,69958,69949,69946,69938,69923,69922,69920,69917,69912,69911,69910,69908,69903,69901,69898,69888,69887,69885,69854,67432,67431,67430,67429,67428,67427,67050,67049,67048,67047,67045,67040,66947,66946,66944,66941,66940,66938,66937,66933,66932,66931,66930,66929,66918,66917,66087,72763,72764,72765,72766,72767,72768,72769,69927,69894?m/676329?s/">
+          View Learning Commons (Richland) in La Vaca Hall
+        </a>
+      </p>
+    </section>
+
+    <!-- Hours -->
+    <section class="hours">
+      <h2>Hours of Operation</h2>
+
+      <h3>Regular Semesters (Fall and Spring)</h3>
+      <ul>
+        <li>Mon-Thurs: 8 a.m. - 8 p.m.</li>
+        <li>Fri: 8 a.m. - 5 p.m.</li>
+        <li>Sat: 9 a.m. - 2 p.m.</li>
+        <li>Sun: Closed</li>
+      </ul>
+
+      <h3>Summer Terms, Winter Terms, and Mini-mesters</h3>
+      <ul>
+        <li>Mon-Fri: 8 a.m. - 5 p.m.</li>
+        <li>Sat-Sun: Closed</li>
+      </ul>
+    </section>
+
+    <!-- Courses Supported -->
+    <section class="courses">
+      <h2>Courses I Support</h2>
+
+      <h3>BIOL 1405 – Biology for Non-Science Majors I</h3>
+      <p>
+        This course is designed for students who are not majoring in science and focuses on understanding basic biological concepts
+        as they relate to everyday life. Topics often include cell structure, metabolism, genetics, evolution, and human impacts on the environment.
+      </p>
+
+      <h3>BIOL 1406 – Biology for Science Majors I</h3>
+      <p>
+        This course is the first part of the biology sequence for science majors. It introduces foundational biological principles including
+        the chemical basis of life, cell structure and function, membrane transport, metabolism, genetics, and molecular biology.
+      </p>
+
+      <h3>BIOL 1407 – Biology for Science Majors II</h3>
+      <p>
+        This course continues the biology sequence for science majors and builds on BIOL 1406. Topics typically include evolution, biodiversity,
+        plant and animal structure and function, and ecology.
+      </p>
+    </section>
+
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p><strong>Kenny Nguyen</strong></p>
+    <p>Biology Tutor & Academic Coach</p>
+    <p>Dallas College · Richland Campus Learning Commons</p>
+    <p>
+      <a href="mailto:knguyn@dallascollege.edu">knguyn@dallascollege.edu</a>
+    </p>
+    <p>© 2025 Kenny Nguyen. All rights reserved.</p>
+  </footer>
+	
 </body>
 </html>
 
