Update term display in contact.html

--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,8 @@
         </p>
       </div>
 
-      <div class="date-term">
-        <p><strong>Today:</strong> <span id="todayText">Loading...</span></p>
-        <p><strong>Current Dallas College Term:</strong> <span id="termText">Loading...</span></p>
+      <div class="semester-term">
+        <p><strong>Current Dallas College Term:</strong> <span id="termText">Winter Term</span></p>
       </div>
     </section>
 
